# posix-shell

./: .gitignore  Makefile.am  README.md  configure.ac
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h
src/builtins/: Makefile.am  alias.c  break.c  builtins.c  builtins.h  cd.c  continue.c  dot.c  echo.c  exit.c  export.c  unset.c
src/execution/: Makefile.am  execute_and_or.c  execute_assignments.c  execute_case.c  execute_command.c  execute_for.c  execute_funcdec.c  execute_if.c  execute_list.c  execute_pipeline.c  execute_redirections.c  execute_simple_command.c  execute_subshell.c  execute_until.c  execute_while.c  execution.c  execution.h  execution_private.h
src/expansion/: Makefile.am  expansion.c  expansion.h
src/functions/: Makefile.am  functions.c  functions.h
src/io/: Makefile.am  io.c  io.h
src/lexer/: Makefile.am  lexer.c  lexer.h
src/matching/: Makefile.am  matching.c  matching.h
src/parser/: Makefile.am  parse_and_or.c  parse_case_clause.c  parse_case_item.c  parse_command.c  parse_compound_list.c  parse_element.c  parse_else_clause.c  parse_funcdec.c  parse_heredoc.c  parse_keyword_command.c  parse_list.c  parse_pipeline.c  parse_prefix.c  parse_redirection.c  parse_rule_case.c  parse_rule_for.c  parse_rule_if.c  parse_rule_until.c  parse_rule_while.c  parse_shell_command.c  parse_simple_command.c  parser.c  parser.h  parser_helpers.c  parser_helpers.h  parser_private.c  parser_private.h
src/shell/: Makefile.am  shell.c  shell.h
src/token/: Makefile.am  aliases.c  aliases.h  string_metadata.c  string_metadata.h  token.c  token.h
src/utils/: Makefile.am
src/utils/hash_map/: hash_map.c  hash_map.h
src/utils/memory/: memory.c  memory.h
src/utils/queue/: queue.c  queue.h
src/utils/string/: string_helpers.c  string_helpers.h
src/utils/vector/: vector.c  vector.h  vector_extra.c  vector_extra.h
src/variables/: Makefile.am  variables.c  variables.h
tests/: Makefile.am
tests/tests_suite/: conftest.py  run_tests.sh
tests/tests_suite/coverage-fix/: test_coverage.py
tests/tests_suite/step1/: test_01_cli.py  test_02_input_modes.py  test_03_basic_features.py  test_04_quotes.py  test_05_syntax_errors.py  test_06_more_lists_if.py  test_07_echo_more.py  test_08_quotes_more.py  test_09_cli_more.py
tests/tests_suite/step2/: test_01_redirections.py  test_02_pipelines.py  test_03_and_or.py  test_04_negation.py  test_05_variables.py  test_06_loops.py  test_07_more_variables.py  test_08_more_redirections.py  test_09_more_pipelines.py  test_10_and_or_more.py  test_11_redirections_more2.py  test_12_more_negation.py
tests/tests_suite/step3/: test_01_cd_exit.py  test_02_export_unset.py  test_03_break_continue.py  test_04_blocks_functions.py  test_05_subshell_subst.py  test_06_dot.py  test_07_more_functions.py  test_08_status.py
tests/tests_suite/step4/: test_01_case.py  test_02_field_splitting.py  test_03_aliases.py  test_04_more_case.py  test_05_ifs_more.py
tests/unit_tests/: expansion_unit_suite.c  io_unit_suite.c  lexer_unit_suite.c  parser_unit_suite.c
